@@ -1,0 +1,23 @@
+#!/bin/sh
+# ianb@erislabs.net 20130504
+# elvis: debcodesearch	-- Search debian source code
+. surfraw || exit 1
+
+w3_usage_hook () {
+    cat <<EOF
+Usage: $w3_argv0 [options] [search words]...
+Description:
+  Search source code of debian packages
+EOF
+    w3_global_usage
+}
+
+w3_config
+w3_parse_args "$@"
+# w3_args now contains a list of arguments
+if test -z "$w3_args"; then
+    w3_browse_url "http://codesearch.debian.net"
+else
+    escaped_args=`w3_url_of_arg $w3_args`
+    w3_browse_url "http://codesearch.debian.net/search?q=${escaped_args}"
+fi
