@@ -25,6 +25,7 @@ elvi.1sr.gz @mandir@/man1/ctan.1sr.gz
 elvi.1sr.gz @mandir@/man1/currency.1sr.gz
 elvi.1sr.gz @mandir@/man1/cve.1sr.gz
 elvi.1sr.gz @mandir@/man1/debbugs.1sr.gz
+elvi.1sr.gz @mandir@/man1/debcodesearch.1sr.gz
 elvi.1sr.gz @mandir@/man1/debcontents.1sr.gz
 elvi.1sr.gz @mandir@/man1/deblists.1sr.gz
 elvi.1sr.gz @mandir@/man1/deblogs.1sr.gz
